tests/testdata/package_json/invalid_value/error.ts.out
error: Invalid npm version requirement. Unexpected character.
  invalid stuff that won't parse
  ~
    at file:///[WILDCARD]/error.ts:2:23
